[package]
name = "reyes"
version = "0.0.0"
edition = "2021"
description = "A comprehensive computer-use CLI built on rustautogui - giving AI vision and control over your computer"
authors = ["Blankeos"]
license = "MIT"
repository = "https://github.com/Blankeos/reyes"
keywords = ["automation", "gui", "cli", "autogui", "computer-use"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70.0"

[[bin]]
name = "reyes"
path = "src/main.rs"

[dependencies]
rustautogui = "2.5.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
anyhow = "1.0"
directories = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies if needed

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
